# chat-bot-manager

./: .gitlab-ci.yml  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
app/: authentication.py  config.py  connection_manager.py  db_models.py  db_utils.py  factory.py  handlers.py  pydantic_models.py  redis_utils.py  run.py
app/routers/: bots.py  chat.py  users.py
client/: run.py
tests/: conftest.py  test_app.py
